Changes with Apache 1.3.21

  *) SECURITY: Make support/split-logfile use the default log file if
     "/" or "\" are present in the virtual host name.  This prevents
     the possible use of specially crafted virtual host names in
     some configurations to allow writing to any .log file on the
     system.  [Daniel Matuschek <daniel.matuschek@swisscom.com>,
     Marc Slemko]  PR#7848

  *) Added a directive: "AcceptFilter <on|off>". To control BSD 
     acccept filters when at compile time SO_ACCEPT_FILTER is 
     detected. The default is still 'on' except when, at compile
     time, AP_ACCEPT_FILTER_OFF is defined. 

     Also downgraded the fatal exit to a warning when the 
     associated setsocketopt(2) fails for any reason but
     for ENOPROTOOPT. The latter - which implies that the
     kernel does not support the filters - now rates only an 
     info level message. All in all this should make it easier
     to move httpd binaries and config files across BSD machines 
     with varying acceptfilter support.
     [Dirk-Willem van Gulik <dirkx@covalent.net>]

  *) Fix the <Files ~ "^\.ht"> container to *really* deny all access.
     Without the Satisfy All, .ht* files could still be fetched if
     they were within the scope of a Satisfy Any directive.
     [Ken Coar]

  *) Print a warning when an attempt is made to use line-end comments.
     Apparently they are not detected/handled gracefully by all directives.
     [Martin Kraemer]

  *) (TPF only) Take advantage of improvements to select(), fork(), and
     exec() in the TPF operating system.  
     [David McCreedy <McCreedy@us.ibm.com>]

  *) (Cygwin only) Fix problems with signals sent to child processes;
     Improve auto-configuration for Cygwin.
     [Stipe Tolj <tolj@wapme-systems.de>]

  *) Added Mod_Vhost_Alias to the project file so that it builds as an
     external module (VHOST.NLM). 
     [Brad Nicholes <BNICHOLES@novell.com>]
